ecmascript/parser/tests/test262-error-references/fail/0d4ff79ab93c897a.js.stderr
error: Unexpected token Some(Comma)
 --> $DIR/tests/test262-parser/fail/0d4ff79ab93c897a.js:1:5
  |
1 | ({a,,} = 0)
  |     ^

